# mesh-to-svg

./: .gitignore  .releaserc  .travis.yml  Cargo.toml  LICENSE_MIT  README.md  package.json
benches/: benchmark.rs
examples/: bin.rs
meshes/: cube-no-edges.json  cube.stl  cylinder.stl  moka-exploded.stl  triangle.stl
src/: lib.rs  lines.rs  main.rs  mesh.rs  scene.rs  svg_renderer.rs
