[package]
name = "mesh-to-svg"
version = "0.0.0" # versioning is handled by semantic-releases
authors = ["Zak Henry <zak.henry@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_log = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
drawille = { version = "0.2.3", optional = true }
clap = { version = "2.33.0", optional = true }
term_size = { version = "0.3.1", optional = true }
log-update = { version = "0.1.0", optional = true }
ctrlc = { version = "3.1.4", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

nalgebra = "0.18"
approx = "0.3.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size. https://github.com/rust-lang/rust/blob/master/src/doc/rustc/src/codegen-options/index.md#opt-level
opt-level = 3

#lto = "yes"
