[package]
name = "mesh-to-svg"
version = "0.0.0" # versioning is handled by semantic-releases
authors = ["Zak Henry <zak.henry@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[[example]]
path = "examples/bin.rs"
name = "mesh-to-svg"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["console_error_panic_hook"]
console_log = []

[dependencies]
wasm-bindgen = "0.2"
itertools = "0.9.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

nalgebra = "0.18"
approx = "0.3.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
drawille = "0.2.3"
clap = "2.33.0"
term_size = "0.3.1"
log-update = "0.1.0"
ctrlc = "3.1.4"
criterion = "0.3"
stl_io = "0.4.2"

[profile.release]
# Tell `rustc` to optimize for small code size. https://github.com/rust-lang/rust/blob/master/src/doc/rustc/src/codegen-options/index.md#opt-level
opt-level = 3

#lto = "yes"
